--- a/project/templates/main/articles_builder.html
+++ b/project/templates/main/articles_builder.html
@@ -246,7 +246,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="closeButton">Скасувати</button>
-                        <button type="button" class="btn btn-success" onclick="postPublication()">Опублікувати</button>
+                        <button type="button" class="btn btn-success" onclick="getPublication('POST')">Опублікувати</button>
                     </div>
                 </div>
             </div>
