--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -84,6 +84,12 @@
                                             </a>
                                         </li>
 
+                                        <li>
+                                            <a class="dropdown-item" href="{{ url_for('views.saved_articles') }}">
+                                                <i class="fa-regular fa-floppy-disk"></i> Збережені статті
+                                            </a>
+                                        </li>
+
                                        <li><hr class="dropdown-divider"></li>
 
                                         <li>
