--- a/project/templates/main/profile.html
+++ b/project/templates/main/profile.html
@@ -9,17 +9,48 @@
     <div class="articles mt-3 mb-3">
         {% if articles %}
             {% for article in articles %}
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a class="link-underline link-underline-opacity-0"
-                               href="{{ url_for('views.article', username=user.username, article_link=article.link) }}">
-                                {{ article.title }}
+                {% with author = article.user_id|user_loader %}
+                    <div class="card mt-3 mb-3">
+                        <div class="card-header bg-transparent d-flex pt-1 pb-1 ps-2 pe-2">
+                            <span class="flex-grow-1 mt-0 mb-0 p-1">
+                                Стаття користувача
+                                <a class="link-body-emphasis link-underline link-underline-opacity-0"
+                                   href="{{ url_for('views.profile', username=author.username) }}">
+                                    @{{ author.username }}
+                                </a>
+                            </span>
+
+                            {% if current_user.is_authenticated %}
+                                {% if author.id == current_user.id %}
+                                    <div class="dropdown">
+                                        <button class="btn p-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-end mt-2">
+                                            <li>
+                                                <button class="dropdown-item" type="button">
+                                                </button>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                {% endif %}
+                            {% endif %}
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Стаття:
+                                <a class="link-body-emphasis link-underline link-underline-opacity-0 ms-1 me-1"
+                                   href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
+                                    "{{ article.title }}"
+                                </a>
+                            </h5>
+                            <a class="btn btn-primary mt-2"
+                               href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
+                                Переглянути
                             </a>
-                        </h5>
-                        <p class="card-text">link: {{ article.link }}</p>
+                        </div>
                     </div>
-                </div>
+                {% endwith %}
             {% endfor %}
         {% else %}
             <p class="fs-3 text-center mt-3 mb-1">
