--- a/project/templates/main/profile_about.html
+++ b/project/templates/main/profile_about.html
@@ -8,6 +8,10 @@
     <div class="about mt-3 mb-3">
         <h3>Про себе</h3>
 
-        <p class="pre">{{ user.bio }}</p>
+        {% if user.bio %}
+            <p class="pre">{{ user.bio }}</p>
+        {% else %}
+            <p>Опис відсутній</p>
+        {% endif %}
     </div>
 {% endblock %}
