--- a/project/templates/main/account_settings.html
+++ b/project/templates/main/account_settings.html
@@ -4,11 +4,13 @@
     Налаштування акаунту
 {% endblock %}
 
-{% block settings_content %}
-    <div class="title m-3 text-center">
+{% block settings_page_title %}
+    <div class="title m-3 mb-4 text-center">
         <h1>Налаштування акаунту</h1>
     </div>
+{% endblock %}
 
+{% block settings_content %}
     <div class="settings mt-3 mb-3">
 
         <div class="registration mt-3 mb-3">
