--- a/project/templates/main/profile.html
+++ b/project/templates/main/profile.html
@@ -28,8 +28,9 @@
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end mt-2">
                                             <li>
-                                                <button class="dropdown-item" type="button">
-                                                </button>
+                                                <a class="dropdown-item" href="{{ url_for('views.articles_editor', article_link=article.link) }}">
+                                                    <i class="fa-regular fa-pen-to-square"></i> Редагувати
+                                                </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -38,13 +39,12 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">
-                                Стаття:
                                 <a class="link-body-emphasis link-underline link-underline-opacity-0 ms-1 me-1"
                                    href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
                                     "{{ article.title }}"
                                 </a>
                             </h5>
-                            <a class="btn btn-primary mt-2"
+                            <a class="btn border mt-2"
                                href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
                                 Переглянути
                             </a>
