--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -37,20 +37,25 @@
 
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'views.home' %}active{% endif %}"
+                               href="{{ url_for('views.home') }}">
+                                Головна
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'views.search' %}active{% endif %}"
+                               href="{{ url_for('views.search') }}">
+                                Пошук
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link {% if request.endpoint == 'views.articles_topics' %}active{% endif %}"
                                href="{{ url_for('views.articles_topics') }}">
                                 Категорії статей
                             </a>
                         </li>
-
-                        {% if not current_user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link {% if request.endpoint == 'views.feedback' %}active{% endif %}"
-                                   href="{{ url_for('views.feedback') }}">
-                                    Зворотній зв'язок
-                                </a>
-                            </li>
-                        {% endif %}
 
                     </ul>
 
@@ -108,6 +113,13 @@
                                 </div>
                             </li>
                         {% else %}
+                            <li class="nav-item me-4">
+                                <a class="nav-link {% if request.endpoint == 'views.feedback' %}active{% endif %}"
+                                   href="{{ url_for('views.feedback') }}">
+                                    Зворотній зв'язок
+                                </a>
+                            </li>
+
                             <li class="nav-item">
                                 <a class="nav-link {% if request.endpoint == 'auth.log_in' %}active{% endif %}"
                                    href="{{ url_for('auth.log_in') }}">
