--- a/project/templates/main/articles.html
+++ b/project/templates/main/articles.html
@@ -1,86 +1,55 @@
-{% extends 'layouts/layout.html' %}
+{% extends 'layouts/home_layout.html' %}
 
-{% block title %}
+{% block articles_title %}
     {{ title }}
 {% endblock %}
 
-{% block content %}
-    <div class="title m-3 mb-4 text-center">
-        <h1>{{ title }}</h1>
-    </div>
-
-    <div class="navigation mt-3 mb-3">
-        <ul class="nav nav-tabs nav-fill">
-            <li class="nav-item">
-                <a class="nav-link link-body-emphasis {% if request.endpoint == 'views.articles' %}active{% endif %}"
-                   href="{{ url_for('views.articles') }}">
-                    Рекомендації
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link link-body-emphasis {% if request.endpoint == 'views.followings' %}active{% endif %}"
-                   href="{{ url_for('views.followings') }}">
-                    Підписки
-                </a>
-            </li>
-
-            {% for topic_subscription in topics_subscriptions %}
-                {% with topic = topic_subscription.topic_id|topic_loader %}
-                    <li class="nav-item">
-                        <a class="nav-link link-body-emphasis {% if request.path == url_for('views.topics_followings', topic=topic.topic) %}active{% endif %}"
-                           href="{{ url_for('views.topics_followings', topic=topic.topic) }}">
-                            {{ topic.topic }}
-                        </a>
-                    </li>
-                {% endwith %}
-            {% endfor %}
-        </ul>
-    </div>
-
+{% block articles_content %}
     <div class="articles mt-3 mb-3">
         {% for article in articles %}
             {% with author = article.user_id|user_loader %}
-                <div class="card mt-3 mb-3">
-                    <div class="card-header bg-transparent d-flex pt-1 pb-1 ps-2 pe-2">
-                        <span class="flex-grow-1 mt-0 mb-0 p-1">
-                            Стаття користувача
-                            <a class="link-body-emphasis link-underline link-underline-opacity-0"
-                               href="{{ url_for('views.profile', username=author.username) }}">
-                                @{{ author.username }}
-                            </a>
-                        </span>
+                {% if author.profile_status or request.endpoint == 'views.followings' %}
+                    <div class="card mt-3 mb-3">
+                        <div class="card-header bg-transparent d-flex pt-1 pb-1 ps-2 pe-2">
+                            <span class="flex-grow-1 mt-0 mb-0 p-1">
+                                Стаття користувача
+                                <a class="link-body-emphasis link-underline link-underline-opacity-0"
+                                   href="{{ url_for('views.profile', username=author.username) }}">
+                                    @{{ author.username }}
+                                </a>
+                            </span>
 
-                        {% if current_user.is_authenticated %}
-                            {% if author.id == current_user.id %}
-                                <div class="dropdown">
-                                    <button class="btn p-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                                    </button>
-                                    <ul class="dropdown-menu dropdown-menu-end mt-2">
-                                        <li>
-                                            <a class="dropdown-item" href="{{ url_for('views.articles_editor', article_link=article.link) }}">
-                                                <i class="fa-regular fa-pen-to-square"></i> Редагувати
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
+                            {% if current_user.is_authenticated %}
+                                {% if author.id == current_user.id %}
+                                    <div class="dropdown">
+                                        <button class="btn p-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-end mt-2">
+                                            <li>
+                                                <a class="dropdown-item" href="{{ url_for('views.articles_editor', article_link=article.link) }}">
+                                                    <i class="fa-regular fa-pen-to-square"></i> Редагувати
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a class="link-body-emphasis link-underline link-underline-opacity-0 ms-1 me-1"
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a class="link-body-emphasis link-underline link-underline-opacity-0 ms-1 me-1"
+                                   href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
+                                    "{{ article.title }}"
+                                </a>
+                            </h5>
+                            <a class="btn border mt-2"
                                href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
-                                "{{ article.title }}"
+                                Переглянути
                             </a>
-                        </h5>
-                        <a class="btn border mt-2"
-                           href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
-                            Переглянути
-                        </a>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             {% endwith %}
         {% endfor %}
     </div>
