--- a/project/templates/main/topic.html
+++ b/project/templates/main/topic.html
@@ -8,46 +8,48 @@
     <div class="articles mt-3 mb-3">
         {% for article in articles %}
             {% with author = article.user_id|user_loader %}
-                <div class="card mt-3 mb-3">
-                    <div class="card-header bg-transparent d-flex pt-1 pb-1 ps-2 pe-2">
-                        <span class="flex-grow-1 mt-0 mb-0 p-1">
-                            Стаття користувача
-                            <a class="link-body-emphasis link-underline link-underline-opacity-0"
-                               href="{{ url_for('views.profile', username=author.username) }}">
-                                @{{ author.username }}
-                            </a>
-                        </span>
+                {% if not article.public or author.profile_status %}
+                    <div class="card mt-3 mb-3">
+                        <div class="card-header bg-transparent d-flex pt-1 pb-1 ps-2 pe-2">
+                            <span class="flex-grow-1 mt-0 mb-0 p-1">
+                                Стаття користувача
+                                <a class="link-body-emphasis link-underline link-underline-opacity-0"
+                                   href="{{ url_for('views.profile', username=author.username) }}">
+                                    @{{ author.username }}
+                                </a>
+                            </span>
 
-                        {% if current_user.is_authenticated %}
-                            {% if author.id == current_user.id %}
-                                <div class="dropdown">
-                                    <button class="btn p-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="fa-solid fa-ellipsis-vertical"></i>
-                                    </button>
-                                    <ul class="dropdown-menu dropdown-menu-end mt-2">
-                                        <li>
-                                            <a class="dropdown-item" href="{{ url_for('views.articles_editor', article_link=article.link) }}">
-                                                <i class="fa-regular fa-pen-to-square"></i> Редагувати
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
+                            {% if current_user.is_authenticated %}
+                                {% if author.id == current_user.id %}
+                                    <div class="dropdown">
+                                        <button class="btn p-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-end mt-2">
+                                            <li>
+                                                <a class="dropdown-item" href="{{ url_for('views.articles_editor', article_link=article.link) }}">
+                                                    <i class="fa-regular fa-pen-to-square"></i> Редагувати
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a class="link-body-emphasis link-underline link-underline-opacity-0 ms-1 me-1"
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a class="link-body-emphasis link-underline link-underline-opacity-0 ms-1 me-1"
+                                   href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
+                                    "{{ article.title }}"
+                                </a>
+                            </h5>
+                            <a class="btn border mt-2"
                                href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
-                                "{{ article.title }}"
+                                Переглянути
                             </a>
-                        </h5>
-                        <a class="btn border mt-2"
-                           href="{{ url_for('views.article', username=author.username, article_link=article.link) }}">
-                            Переглянути
-                        </a>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             {% endwith %}
         {% endfor %}
     </div>
