--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -91,13 +91,13 @@
 
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('views.settings') }}">
-                                                <i class="fa-solid fa-gear"></i> Налаштування
+                                                <i class="fa-solid fa-sliders"></i> Налаштування
                                             </a>
                                         </li>
 
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('views.feedback') }}">
-                                                <i class="fa-solid fa-comment-dots"></i> Зворотній зв'язок
+                                                <i class="fa-regular fa-message"></i> Зворотній зв'язок
                                             </a>
                                         </li>
 
@@ -106,7 +106,7 @@
 
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">
-                                                <i class="fa-solid fa-right-from-bracket"></i> Вихід
+                                                <i class="fa-solid fa-door-open"></i> Вихід
                                             </a>
                                         </li>
                                     </ul>
