--- a/project/templates/layouts/newsletter_layout.html
+++ b/project/templates/layouts/newsletter_layout.html
@@ -1,33 +1,15 @@
 <!doctype html>
 
 <html lang="uk" data-bs-theme="dark">
-
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
 
-    <body class="{% block background %}{% endblock %}">
-
-        <nav class="navbar navbar-expand-lg p-2 bg-body-tertiary">
-            <div class="container-xxl container-fluid">
-
-                <a class="navbar-brand" href="{{ url_for('views.home') }}">
-                    <img class="d-inline-block align-text-top" style="width: 26.4px; height: auto;" src="{{ url_for('views.favicon') }}"/>
-                    <span>Articlify</span>
-                </a>
-
-            </div>
-        </nav>
-
+    <body>
         <div class="container">
             {% block content %}
             {% endblock %}
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
-
 </html>
